<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/table2_title"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/fm2icon"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/table2_cwBtn"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@drawable/cw"
                />
            <TextView
                android:id="@+id/table2_cwlable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cwtxt"
                android:textSize="20sp"
                android:layout_toRightOf="@id/table2_cwBtn"
                />
            <TextView
                android:id="@+id/table2_cwText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="较舒适"
                android:textSize="25sp"
                android:layout_toRightOf="@id/table2_cwBtn"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/table2_drsgBtn"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@drawable/drsg"
                />
            <TextView
                android:id="@+id/table2_drsglable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drsgtxt"
                android:textSize="20sp"
                android:layout_toRightOf="@id/table2_drsgBtn"
                />
            <TextView
                android:id="@+id/table2_drsgText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="炎热"
                android:textSize="25sp"
                android:layout_toRightOf="@id/table2_drsgBtn"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/table2_fluBtn"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@drawable/flu"
                />
            <TextView
                android:id="@+id/table2_flulable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flutxt"
                android:textSize="20sp"
                android:layout_toRightOf="@id/table2_fluBtn"
                />
            <TextView
                android:id="@+id/table2_fluText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="较舒适"
                android:textSize="25sp"
                android:layout_toRightOf="@id/table2_fluBtn"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/table2_sportBtn"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@drawable/sport"
                />
            <TextView
                android:id="@+id/table2_sportlable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sporttxt"
                android:textSize="20sp"
                android:layout_toRightOf="@id/table2_sportBtn"
                />
            <TextView
                android:id="@+id/table2_sportText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="较舒适"
                android:textSize="25sp"
                android:layout_toRightOf="@id/table2_sportBtn"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/table2_travBtn"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@drawable/trav"
                />
            <TextView
                android:id="@+id/table2_travlable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travtxt"
                android:textSize="20sp"
                android:layout_toRightOf="@id/table2_travBtn"
                />
            <TextView
                android:id="@+id/table2_travText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="较舒适"
                android:textSize="25sp"
                android:layout_toRightOf="@id/table2_travBtn"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/table2_uvBtn"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@drawable/uv"
                />
            <TextView
                android:id="@+id/table2_uvlable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uvtxt"
                android:textSize="20sp"
                android:layout_toRightOf="@id/table2_uvBtn"
                />
            <TextView
                android:id="@+id/table2_uvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="中"
                android:textSize="25sp"
                android:layout_toRightOf="@id/table2_uvBtn"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/table2_suggestionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="白天天气多云，同时会感到有些热，不很舒适"
            android:textSize="24sp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_marginTop="20dp"
                    android:id="@+id/table2_forecast1Img"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                  android:layout_gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/table2_forecast1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="03-15"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_marginTop="20dp"
                    android:id="@+id/table2_forecast2Img"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                  android:layout_gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/table2_forecast2Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="03-15"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_marginTop="20dp"
                    android:id="@+id/table2_forecast3Img"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                  android:layout_gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/table2_forecast3Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="03-15"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_marginTop="20dp"
                    android:id="@+id/table2_forecast4Img"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                  android:layout_gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/table2_forecast4Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="03-15"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_marginTop="20dp"
                    android:id="@+id/table2_forecast5Img"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                  android:layout_gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/table2_forecast5Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="03-15"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_marginTop="20dp"
                    android:id="@+id/table2_forecast6Img"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                  android:layout_gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/table2_forecast6Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="03-15"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_marginTop="20dp"
                    android:id="@+id/table2_forecast7Img"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                  android:layout_gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/table2_forecast7Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="03-15"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
